[metadata]
name = pmac_motorhome
description = Generate homing procedures in pmc code for Delta Tau motion controllers
url = https://github.com/DiamondLightSource/pmac_motorhome
author = Arvinder Palaha
author_email = arvinder.palaha@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires =
    jinja2
    click

# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = True


[options.extras_require]
# For development tests/docs
dev =
    pytest
    isort
    pytest-cov
    sphinx-rtd-theme-github-versions
    importlib-metadata



[options.entry_points]
# Include a command line script
console_scripts =
    homing_convert = converter.converter:homing_convert

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=pmac_motorhome --cov-report term --cov-report xml:cov.xml --ignore tests/converter

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
